<resources>
    <string name="app_name">Story</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_now">Register Now</string>
    <string name="get_started">Get started</string>
    <string name="input_email">Please input your email</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="input_pass">Please input your password</string>
    <string name="pass_minimum_length">Password must be at least 8 characters long</string>
    <string name="password">Password</string>
    <string name="email">Email address</string>
    <string name="no_account"> ------- Don\'t have an account yet? -------</string>
    <string name="already_have_account"> ------- Already have an account? -------</string>
    <string name="name">Name</string>
    <string name="input_name">Enter your full name</string>
    <string name="camera">Camera</string>
    <string name="add_story_success">Story added successfully</string>
    <string name="upload">upload</string>
<!--    <string name="description">description</string>-->
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="no_data">no data</string>
    <string name="add_story">Add story</string>
    <string name="package_name">com.example.storyapp</string>
    <string name="choose_picture">Choose a picture</string>
    <string name="input_image">the image has not been input</string>
    <string name="input_description">Description has not been input</string>
    <string name="message">"Message : "</string>
    <string name="unauthorized">Incorrect email or password</string>
    <string name="timeout">Timeout, please try again</string>
    <string name="create_user">User created</string>
    <string name="email_taken">Email is already taken</string>
    <string name="error_message">"There is an error :  "</string>
    <string name="language_option">Change Language</string>
    <string name="logout">Logout</string>
    <string name="user_detail_title">%1$s\'s Story</string>
    <string name="exitbackpressed">Press back again to exit</string>
    <string name="title_activity_maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="API_error_fetch_data">Error while fetching data</string>
    <string name="no_location">No Location</string>
    <string name="location">Location: </string>
    <string name="description">Description: </string>
    <string name="add_location">Add location</string>
</resources>