<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AddStoryActivity"
    android:background="@color/white2">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="334dp"
            android:layout_height="334dp"
            android:layout_marginTop="44dp"
            android:background="@color/gray"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_image_24" />

        <Button
            android:id="@+id/button_camera"
            android:layout_width="115dp"
            android:layout_height="45dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="28dp"
            android:backgroundTint="@color/teal_200"
            android:layout_marginEnd="8dp"
            android:text="@string/camera"
            app:layout_constraintBottom_toTopOf="@+id/ed_add_description"
            app:layout_constraintEnd_toStartOf="@+id/button_gallery"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_photo"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_gallery"
            android:layout_width="115dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/teal_200"
            android:layout_marginEnd="120dp"
            android:text="@string/gallery"
            app:layout_constraintBottom_toBottomOf="@+id/button_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_camera"
            app:layout_constraintTop_toTopOf="@+id/button_camera"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/ed_add_description"
            android:layout_width="334dp"
            android:layout_height="100dp"
            android:layout_marginTop="105dp"
            android:autofillHints="Description"
            android:background="@color/white"
            android:gravity="top|start"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:maxWidth="360dp"
            android:maxHeight="180dp"
            android:maxLines="8"
            android:padding="15dp"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_photo" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:layout_marginTop="84dp"
            android:text="@string/upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_add_description" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />

        <CheckBox
            android:id="@+id/add_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="22dp"
            android:text="@string/add_location"
            app:layout_constraintBottom_toTopOf="@+id/button_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_add_description"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


