<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.DetailActivity"
    android:background="@color/white2"
    android:transitionGroup="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_detail_photo"
            android:layout_width="334dp"
            android:layout_height="334dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/photo"
            android:padding="2dp"
            android:transitionName="photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_image_24" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/teal_700"
            android:layout_marginBottom="20dp"
            android:text="@string/name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:transitionName="name"
            app:layout_constraintBottom_toTopOf="@+id/tv_detail_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_photo" />

        <TextView
            android:id="@+id/tv_detail_location"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:shadowColor="@color/teal_700"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_tdescription"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_name" />

        <TextView
            android:id="@+id/tv_tlocation"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_tdescription"
            app:layout_constraintEnd_toStartOf="@+id/tv_detail_location"
            app:layout_constraintHorizontal_bias="0.951"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_tdescription"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_detail_description"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_location"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_tlocation" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:shadowColor="@color/teal_700"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
